--- a/css/sass/main.scss
+++ b/css/sass/main.scss
@@ -19,7 +19,7 @@
 @import "pages/layout";
 @import "pages/home";
 @import "pages/about";
-@import "pages/user-interface";
+@import "pages/prototype";
 @import "pages/interaction";
 
 
