--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -6,9 +6,20 @@
  */
 
 .wrapper-container {
-    max-width: 1200px;
-    padding: 30px;
-    height: 100vh;
+  max-width: 1200px;
+  padding: 30px;
+  height: 100vh;
+}
+
+.fullpage-section {
+	width: 100%;
+	height: 100vh;
+	flex-wrap: wrap;
+}
+
+.section-container {
+	max-width: 1200px;
+	padding: 30px;
 }
 
 /**
@@ -25,7 +36,7 @@
 .is-row {
     flex-direction: row;
 }
-.isRowReverse {
+.is-row-reverse {
     flex-direction: row-reverse;
 }
 .isColumn {
