--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -139,15 +139,9 @@
 
 
 }
-
+	/*   Intro section   */
 	.prototype-intro-wrapper {
-		width: 100%;
-		height: 100vh;
-		flex-wrap: wrap;
-		.section-container {
-			max-width: 1200px;
-			padding: 30px;
-		}
+		
 		.intro-text {
 			h1 {
 				font-size: 5em;
@@ -166,9 +160,22 @@
 		.welcome-iphone {
 			text-align: center;
 			}
+	}
 
+	/*   Process section   */
+	.prototype-process {
 
+		background: #fff;
+		.process-text {
+			h1, h4 {
+				color: $salmon;
+			}
+			p {
+				color: #595959;
+			}
 
+		}
+		
 	}
 
 
