--- a/css/main.css
+++ b/css/main.css
@@ -271,15 +271,13 @@ html {
  * main flex-container
  */
 .wrapper-container {
-  max-width: 1200px;
+  max-width: 960px;
   padding: 30px;
   height: 100vh; }
 
 .fullpage-section {
   width: 100%;
-  height: 100vh;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap; }
+  height: 100vh; }
 
 .section-container {
   max-width: 960px;
@@ -408,7 +406,7 @@ html {
   -ms-flex-item-align: baseline;
       align-self: baseline; }
 
-.contentCenter {
+.content-center {
   -ms-flex-line-pack: center;
       align-content: center; }
 
@@ -1193,6 +1191,8 @@ hr {
 
 .prototype-intro-wrapper .welcome-iphone {
   text-align: center; }
+  .prototype-intro-wrapper .welcome-iphone img {
+    width: 200px; }
 
 /*   Process section   */
 .prototype-process {
