--- a/css/sass/base/_flex.scss
+++ b/css/sass/base/_flex.scss
@@ -6,7 +6,7 @@
  */
 
 .wrapper-container {
-  max-width: 1200px;
+  max-width: 960px;
   padding: 30px;
   height: 100vh;
 }
@@ -14,7 +14,6 @@
 .fullpage-section {
 	width: 100%;
 	height: 100vh;
-	flex-wrap: wrap;
 }
 
 .section-container {
@@ -99,7 +98,7 @@
 .selfBaseline {
     align-self: baseline;
 }
-.contentCenter {
+.content-center {
     align-content: center;
 }
 .contentStretch {
