--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -189,7 +189,19 @@
 			}
 		}
 		
+		 /*   mockup section   */
+		.mockups {
+			background: #F2F2F2;
+			width: 100%;
+		}
+
 	}
+
+
+	
+		
+
+
 
 
 
