--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -1,13 +1,23 @@
-// GOTHAM
+/*---------------
+    GOTHAM
+---------------*/
 @font-face { font-family: Gotham_black; src: url(../fonts/GOTHAM-BLACK.TTF);}
 @font-face { font-family: Gotham_medium; src: url(../fonts/GOTHAM-MEDIUM.TTF);}
 @font-face { font-family: Gotham_thin; src: url(../fonts/GOTHAM-LIGHT.TTF);}
 
-// AVANTGARDE
+/*---------------
+    AVANTGARDE
+---------------*/
 @font-face { font-family: avant_light; src: url(../fonts/ITCAvantGardePro-XLt.otf);}
 @font-face { font-family: avant_book; src: url(../fonts/ITCAvantGardePro-Bk.otf);}
 @font-face { font-family: avant_medium; src: url(../fonts/ITCAvantGardePro-Md.otf);}
 @font-face { font-family: avant_bold; src: url(../fonts/ITCAvantGardePro-Bold.otf);}
+
+/*---------------
+    SERIF
+---------------*/
+@font-face { font-family: galaxie_book; src: url(../fonts/GalaxieCopernicus-Book.otf);}
+@font-face { font-family: galaxie_italic; src: url(../fonts/GalaxieCopernicus-BookItalic.otf);}
 
 $body: Gotham_thin, sans-serif;
 $medium: Gotham_medium, sans-serif;
@@ -17,6 +27,9 @@ $light_avant: avant_light, sans-serif;
 $body_avant: avant_book, sans-serif;
 $medium_avant: avant_medium, sans-serif;
 $bold_avant: avant_bold, sans-serif;
+
+$serif: galaxie_book;
+$serif_italic: galaxie_italic;
 
 
 p {
