--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -197,6 +197,15 @@
 			width: 100%;
 		}
 
+
+		.final-prototype-screens {
+			margin-top: 50px;
+			margin-bottom: 150px;
+			img {
+				width: 190px;
+			}
+		}
+
 	}
 
 
