--- a/css/sass/base/_type.scss
+++ b/css/sass/base/_type.scss
@@ -32,14 +32,11 @@ $serif: galaxie_book;
 $serif_italic: galaxie_italic;
 
 
-p {
-  margin: 0;
-}
-
 body, 
 p {
-  font-family: $light_avant, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-  font-size: 14px;
+  font-family: $body, "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  margin: 0;
+  font-size: 15px;
   line-height: 1.6;
   color: $reverse;
 }
