--- a/css/sass/base/_config.scss
+++ b/css/sass/base/_config.scss
@@ -12,6 +12,10 @@ $line-height: 44px; // Consistent height for buttons, inputs etc.
 $small-break: 480px;
 $big-break: 780px;
 
+// Spacing
+$margin-bottom: 35px;
+$margin-top: 35px;
+
 /* Colors */
 // Cool
 $aqua:  #7fdbff;
