--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -207,7 +207,8 @@
 
 		.wireframe-sketches {
 			img {
-				box-shadow: 2px 2px 1px #e5e5e5;
+				// box-shadow: 2px 2px 1px #e5e5e5;
+				border: solid 1px #e5e5e5;
 			}
 		}
 
