--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -100,10 +100,57 @@
 /* PROTOTYPE CASE STUDY / BIRD NERD
    ========================================================================== */
 
+.prototype-main-wrapper {
+	h1, h2, h3, h5{
+			color: $salmon;
+		}
+		p {
+			color: #595959;
+			margin-bottom: 30px;
+		}
+
+		h1 {
+			font-size: 2.5em;
+			font-size: $bold_avant;
+			text-transform: uppercase;
+	}
+}
+
 
 /**
  * MOBILE FIRST QUERIES
  */
+
+
+/*   Intro section   */
+.prototype-intro-wrapper {
+
+	.intro-text {
+		margin-top: 80px;
+		margin-bottom: 35px;
+		h1 {
+			font-size: 3em;
+			color: $salmon;
+			text-transform: uppercase;
+			font-family: $bold_avant;
+		}
+		p {
+			margin-bottom: 5px;
+			color: $reverse;
+		}
+		p:nth-child(4) {
+			margin-bottom: 20px;
+		}
+		p span {
+			font-family: $bold;
+		}
+	}
+
+	.welcome-iphone {
+		display: none;
+	}	
+
+}
 
 
 
@@ -126,7 +173,28 @@
  * LARGER THAN TABLET
  */
 @media screen and (min-width: 750px) {
-	
+
+	/*   Intro section   */
+	.prototype-intro-wrapper {
+		.prototype-case-study {
+			flex-direction: row;
+			.intro-text {
+				margin: 0px;
+				h1 {
+					font-size: 4em;
+				}
+				flex-basis: 67%;
+    		max-width: 67%;
+			}
+		}
+		.welcome-iphone {
+			display: inline;
+			text-align: center;
+			img {
+				width: 80%;
+			}
+		}	
+	}
 
 
 }
@@ -138,44 +206,6 @@
 
 }
 
-.prototype-main-wrapper {
-	h1, h2, h3, h5{
-			color: $salmon;
-		}
-		p {
-			color: #595959;
-			margin-bottom: 30px;
-		}
-
-		h1 {
-			font-size: 2.5em;
-			font-size: $bold_avant;
-			text-transform: uppercase;
-	}
-}
-
-	/*   Intro section   */
-	.prototype-intro-wrapper {
-		
-		.intro-text {
-			h1 {
-				font-size: 4em;
-				color: $salmon;
-				text-transform: uppercase;
-				font-family: $bold_avant;
-			}
-			p {
-				margin-bottom: 5px;
-				color: $reverse;
-			}
-			p:nth-child(4) {
-				margin-bottom: 20px;
-			}
-			p span {
-				font-family: $bold;
-			}
-		}	
-	}
 
 	/*   Process section   */
 	.process {
