--- a/css/main.css
+++ b/css/main.css
@@ -1169,17 +1169,22 @@ hr {
 /* Larger than desktop */
 /* PROTOTYPE CASE STUDY / BIRD NERD
    ========================================================================== */
-.prototype-main-wrapper h1, .prototype-main-wrapper h2, .prototype-main-wrapper h3, .prototype-main-wrapper h5 {
-  color: #E94444; }
+.prototype-main-wrapper h1, .prototype-main-wrapper h2, .prototype-main-wrapper h3, .prototype-main-wrapper h4, .prototype-main-wrapper h5 {
+  color: #E94444;
+  font-family: avant_bold, sans-serif; }
+
+.prototype-main-wrapper h2 {
+  font-size: 2.5em; }
 
 .prototype-main-wrapper p {
   color: #595959;
   margin-bottom: 30px; }
 
-.prototype-main-wrapper h1 {
-  font-size: 2.5em;
-  font-size: avant_bold, sans-serif;
-  text-transform: uppercase; }
+.prototype-main-wrapper .scope,
+.prototype-main-wrapper .wireframes,
+.prototype-main-wrapper .mockup,
+.prototype-main-wrapper .final-prototype {
+  background: #fff; }
 
 /**
  * MOBILE FIRST QUERIES
@@ -1215,6 +1220,11 @@ hr {
  */
 @media screen and (min-width: 750px) {
   /*   Intro section   */
+  .prototype-intro-wrapper .prototype-watermark {
+    width: 100%;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.02; }
   .prototype-intro-wrapper .prototype-case-study {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
