--- a/css/sass/pages/_prototype.scss
+++ b/css/sass/pages/_prototype.scss
@@ -167,6 +167,27 @@
 	background: #F2F2F2;
 }
 
+
+
+/*   scope section   */
+
+.scope {
+	.client-sketches {
+			flex-wrap: wrap;
+		.client-sketch-item {
+		  flex-basis: 24%;
+	    max-width: 24%;
+		}
+
+	}
+
+	h5 {
+		@include captionitalic;
+	}
+}
+
+
+
 /*   wireframes section   */
 .wireframes {
 	.sketch-wireframes {
@@ -183,26 +204,25 @@
 	}
 }
 
-/*   scope section   */
 
-.scope {
-	h5 {
-		@include captionitalic;
-	}
-}
 
-/**
- * LARGER THAN MOBILE
- */
-@media (min-width: 400px) {
-	
-
-}	
 
 /**
  * LARGER THAN PHAMBLET
  */
 @media (min-width: 550px) {
+
+	/*   scope section   */
+	// .scope {
+	// 	.client-sketches > div {
+	// 		flex-basis: 16%;
+	// 		max-width: 16%;
+	// 	}
+
+	// 	h5 {
+	// 		@include captionitalic;
+	// 	}
+	// }	
 
 }
 
@@ -242,14 +262,6 @@
 
 
 }
-
-
-
-/* Larger than desktop */
-@media (min-width: 1000px) {
-
-}
-
 
 
 
